# wf-recorder-gui

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md  package.nix  recway.desktop  test_config.rs
assets/: style.css
src/: main.rs  theme.rs
src/config/: mod.rs
src/recorder/: implementation.rs
src/ui/: countdown_view.rs  recording_view.rs  settings_view.rs  window.rs
