[package]
name = "wf-recorder-gui"
version = "0.3.0"
edition = "2021"
description = "A modern, minimal GUI for wf-recorder"
authors = ["Cline"]

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "4.4"
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"
rfd = "0.14"
